<?xml version="1.0"?>
<!--
Copyright (c) 2012-2017, jcabi.com
All rights reserved.

Redistribution and use in source and binary forms, with or without
modification, are permitted provided that the following conditions
are met: 1) Redistributions of source code must retain the above
copyright notice, this list of conditions and the following
disclaimer. 2) Redistributions in binary form must reproduce the above
copyright notice, this list of conditions and the following
disclaimer in the documentation and/or other materials provided
with the distribution. 3) Neither the name of the jcabi.com nor
the names of its contributors may be used to endorse or promote
products derived from this software without specific prior written
permission.

THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
"AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT
NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND
FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL
THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT,
INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
(INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT,
STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED
OF THE POSSIBILITY OF SUCH DAMAGE.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.jcabi</groupId>
    <artifactId>jcabi</artifactId>
    <version>1.31.0</version>
  </parent>
  <artifactId>jcabi-aspects</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>bundle</packaging>
  <name>jcabi-aspects</name>
  <description>Collection of convenient and useful Java annotations</description>
  <issueManagement>
    <system>github</system>
    <url>https://github.com/jcabi/jcabi-aspects/issues</url>
  </issueManagement>
  <ciManagement>
    <system>rultor</system>
    <url>https://www.rultor.com/s/jcabi</url>
  </ciManagement>
  <scm>
    <connection>scm:git:github.com:jcabi/jcabi-aspects.git</connection>
    <developerConnection>scm:git:github.com:jcabi/jcabi-aspects.git
    </developerConnection>
    <url>https://github.com/jcabi/jcabi-aspects</url>
  </scm>
  <distributionManagement>
    <site>
      <id>aspects.jcabi.com</id>
      <url>https://github.com/jcabi/jcabi-aspects</url>
    </site>
  </distributionManagement>
  <dependencies>
    <dependency>
      <groupId>com.jcabi</groupId>
      <artifactId>jcabi-log</artifactId>
      <!-- version is set in order to avoid a cyclic reference -->
      <version>0.17</version>
      <exclusions>
        <exclusion>
          <groupId>com.jcabi</groupId>
          <artifactId>jcabi-aspects</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.aspectj</groupId>
      <artifactId>aspectjrt</artifactId>
      <scope>compile</scope>
      <version>1.9.7</version>
    </dependency>
    <dependency>
      <groupId>javax.validation</groupId>
      <artifactId>validation-api</artifactId>
      <version>2.0.1.Final</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-validator</artifactId>
      <version>5.3.0.Alpha1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>javax.el</groupId>
      <artifactId>javax.el-api</artifactId>
      <version>3.0.1-b04</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.glassfish.web</groupId>
      <artifactId>javax.el</artifactId>
      <version>2.2.6</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-log4j12</artifactId>
      <version>1.8.0-alpha2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>1.2.17</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.6.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>5.6.2</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>aspectj-maven-plugin</artifactId>
        <version>1.8</version>
        <configuration>
          <complianceLevel>1.8</complianceLevel>
          <source>1.8</source>
          <target>1.8</target>
          <deprecation>true</deprecation>
          <encoding>${project.build.sourceEncoding}</encoding>
          <showWeaveInfo>true</showWeaveInfo>
          <forceAjcCompile>true</forceAjcCompile>
          <verbose>false</verbose>
          <Xlint>warning</Xlint>
          <argumentFileName>builddef-${project.name}.lst</argumentFileName>
          <excludes>
            <exclude>**/package-info.java</exclude>
          </excludes>
        </configuration>
        <executions>
          <execution>
            <id>jcabi-weave-classes</id>
            <goals>
              <goal>compile</goal>
              <goal>test-compile</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>templating-maven-plugin</artifactId>
        <version>1.0.0</version>
        <executions>
          <execution>
            <id>default-cli</id>
            <phase>process-resources</phase>
            <goals>
              <goal>filter-sources</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <sourceDirectory>${basedir}/src/main/java-templates</sourceDirectory>
          <outputDirectory>
            ${project.build.directory}/generated-sources/java-templates/
          </outputDirectory>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.felix</groupId>
        <artifactId>maven-bundle-plugin</artifactId>
        <version>3.0.0</version>
        <extensions>true</extensions>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>qulice</id>
      <build>
        <plugins>
          <plugin>
            <groupId>com.qulice</groupId>
            <artifactId>qulice-maven-plugin</artifactId>
            <version>0.18.19</version>
            <configuration>
              <excludes combine.children="append">
                <exclude>checkstyle:/src/it/.*</exclude>
                <exclude>checkstyle:/src/site/apt/.*</exclude>
                <exclude>pmd:/src/it/.*</exclude>
                <exclude>findbugs:.*</exclude>
                <exclude>xml:/src/it/settings.xml</exclude>
                <exclude>checkstyle:\\src\\it\\.*</exclude>
                <exclude>checkstyle:\\src\\site\\apt\\.*</exclude>
                <exclude>pmd:\\src\\it\\.*</exclude>
                <exclude>findbugs:.*</exclude>
                <exclude>xml:\\src\\it\\settings.xml</exclude>
              </excludes>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>coveralls</id>
      <!-- It doesn't work because cobertura is disabled, see above -->
      <!--
      <activation>
          <file><exists>pom.xml</exists></file>
      </activation>
      -->
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>cobertura-maven-plugin</artifactId>
            <executions>
              <execution>
                <phase>site</phase>
                <goals>
                  <goal>cobertura</goal>
                </goals>
                <configuration>
                  <format>xml</format>
                  <maxmem>256m</maxmem>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.eluder.coveralls</groupId>
            <artifactId>coveralls-maven-plugin</artifactId>
            <version>4.1.0</version>
            <executions>
              <execution>
                <phase>site</phase>
                <goals>
                  <goal>report</goal>
                </goals>
                <configuration>
                  <repoToken>${coveralls.token.aspects}</repoToken>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
